--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>me.fedox</groupId>
   <artifactId>skCord</artifactId>
-  <version>2.0-RELEASE</version>
+  <version>2.1-RELEASE</version>
   <packaging>jar</packaging>
 
   <name>skCord</name>
@@ -31,6 +31,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
         <version>3.2.4</version>
+          <configuration>
+              <relocations>
+                  <relocation>
+                      <pattern>org.bstats</pattern>
+                      <shadedPattern>me.fedox.skcord.metrics</shadedPattern>
+                  </relocation>
+              </relocations>
+          </configuration>
         <executions>
           <execution>
             <phase>package</phase>
@@ -82,6 +90,12 @@
           <groupId>club.minnced</groupId>
           <artifactId>discord-webhooks</artifactId>
           <version>0.8.4</version>
+      </dependency>
+      <dependency>
+          <groupId>org.bstats</groupId>
+          <artifactId>bstats-bukkit</artifactId>
+          <version>3.0.2</version>
+          <scope>compile</scope>
       </dependency>
   </dependencies>
 </project>
