--- a/pom.xml
+++ b/pom.xml
@@ -90,11 +90,23 @@
           <groupId>club.minnced</groupId>
           <artifactId>discord-webhooks</artifactId>
           <version>0.8.4</version>
+          <exclusions>
+              <exclusion>
+                  <groupId>org.jetbrains.kotlin</groupId>
+                  <artifactId>kotlin-stdlib</artifactId>
+              </exclusion>
+          </exclusions>
       </dependency>
       <dependency>
           <groupId>org.bstats</groupId>
           <artifactId>bstats-bukkit</artifactId>
           <version>3.0.2</version>
+          <scope>compile</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations</artifactId>
+          <version>24.0.0</version>
           <scope>compile</scope>
       </dependency>
   </dependencies>
